// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter: <ApplyButton /> should handle clicks 1`] = `
<div
  className={
    Object {
      "data-css-prcfqy": "",
    }
  }
>
  <Button
    className=""
    disabled={false}
    flat={true}
    onClick={[MockFunction]}
    testId="applyFilterButton"
    type="primary"
    wrapContent={true}
  >
    <span
      style={
        Object {
          "color": undefined,
        }
      }
    >
      <Translate
        className=""
        params={Object {}}
        string="filter.apply"
      />
    </span>
  </Button>
</div>
`;

exports[`Filter: <ApplyButton /> should render as activated 1`] = `
<div
  className={
    Object {
      "data-css-prcfqy": "",
    }
  }
>
  <Button
    className=""
    disabled={false}
    flat={true}
    onClick={[Function]}
    testId="applyFilterButton"
    type="primary"
    wrapContent={true}
  >
    <span
      style={
        Object {
          "color": undefined,
        }
      }
    >
      <Translate
        className=""
        params={Object {}}
        string="filter.apply"
      />
    </span>
  </Button>
</div>
`;

exports[`Filter: <ApplyButton /> should render as deactivated 1`] = `
<div
  className={
    Object {
      "data-css-prcfqy": "",
    }
  }
>
  <Button
    className=""
    disabled={true}
    flat={true}
    onClick={[Function]}
    testId="applyFilterButton"
    type="primary"
    wrapContent={true}
  >
    <span
      style={
        Object {
          "color": undefined,
        }
      }
    >
      <Translate
        className=""
        params={Object {}}
        string="filter.apply"
      />
    </span>
  </Button>
</div>
`;
